@@ -17,6 +17,9 @@ Release 1.0 (in development)
 Release 0.6.2 (in development)
 ==============================
 
+* #146: Don't fail to generate LaTeX when the user has an active
+  ``.docutils`` configuration.
+
 * #29: Don't generate visible "-{-}" in option lists in LaTeX.
 
 * Fix cross-reference roles when put into substitutions.
